Fix tabbar z-index bug.

--- a/app/stylesheets/layout/_tabbar.scss
+++ b/app/stylesheets/layout/_tabbar.scss
@@ -4,6 +4,7 @@
   top: 47px;
   left: 40px;
   right: 0;
+  z-index: 99;
   background-color: $dark-selected-item;
 
   .tabbar-inner {
